# Generated by Django 6.0.5 on 2026-05-15 12:42

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('app', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Aluno',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('matricula', models.CharField(max_length=20, unique=True)),
                ('curso', models.CharField(max_length=100)),
                ('periodo', models.IntegerField()),
            ],
        ),
        migrations.CreateModel(
            name='Coordenador',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('curso_coordenado', models.CharField(max_length=100)),
            ],
        ),
        migrations.CreateModel(
            name='Documento',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('termo', 'Termo de Compromisso'), ('apolice', 'Apólice'), ('relatorio_parcial', 'Relatório Parcial'), ('relatorio_final', 'Relatório Final')], max_length=30)),
                ('arquivo', models.FileField(blank=True, null=True, upload_to='documentos/')),
                ('status', models.CharField(choices=[('pendente', 'Pendente'), ('aprovado', 'Aprovado'), ('rejeitado', 'Rejeitado')], default='pendente', max_length=20)),
                ('data_envio', models.DateField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='Empresa',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cnpj', models.CharField(max_length=18, unique=True)),
                ('telefone', models.CharField(blank=True, max_length=20)),
                ('endereco', models.CharField(blank=True, max_length=150)),
            ],
        ),
        migrations.CreateModel(
            name='Estagio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('pendente', 'Pendente'), ('aprovado', 'Aprovado'), ('reprovado', 'Reprovado'), ('concluido', 'Concluído')], default='pendente', max_length=20)),
                ('data_inicio', models.DateField(blank=True, null=True)),
                ('data_fim', models.DateField(blank=True, null=True)),
                ('aluno', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.aluno')),
                ('coordenador', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='app.coordenador')),
            ],
        ),
        migrations.CreateModel(
            name='Professor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('area_atuacao', models.CharField(max_length=100)),
            ],
        ),
        migrations.CreateModel(
            name='Relatorio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=100)),
                ('descricao', models.TextField()),
                ('data_criacao', models.DateField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='Usuario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=100)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('senha', models.CharField(max_length=255)),
                ('perfil', models.CharField(choices=[('aluno', 'Aluno'), ('professor', 'Professor'), ('coordenador', 'Coordenador'), ('empresa', 'Empresa')], max_length=20)),
            ],
        ),
        migrations.CreateModel(
            name='Vaga',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=100)),
                ('descricao', models.TextField()),
                ('area', models.CharField(max_length=100)),
                ('carga_horaria', models.IntegerField()),
                ('ativa', models.BooleanField(default=True)),
            ],
        ),
        migrations.DeleteModel(
            name='Produto',
        ),
        migrations.AddField(
            model_name='documento',
            name='estagio',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.estagio'),
        ),
        migrations.AddField(
            model_name='estagio',
            name='professor',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='app.professor'),
        ),
        migrations.AddField(
            model_name='relatorio',
            name='estagio',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.estagio'),
        ),
        migrations.AddField(
            model_name='professor',
            name='usuario',
            field=models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='app.usuario'),
        ),
        migrations.AddField(
            model_name='empresa',
            name='usuario',
            field=models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='app.usuario'),
        ),
        migrations.AddField(
            model_name='coordenador',
            name='usuario',
            field=models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='app.usuario'),
        ),
        migrations.AddField(
            model_name='aluno',
            name='usuario',
            field=models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='app.usuario'),
        ),
        migrations.AddField(
            model_name='vaga',
            name='empresa',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.empresa'),
        ),
        migrations.AddField(
            model_name='estagio',
            name='vaga',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.vaga'),
        ),
    ]
